working on detail functionality

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Spectral&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Lexend+Deca&display=swap" rel="stylesheet">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/48fd9e03c9.js"></script>
     
